# skill-enabled_dept_website

./: .env.example  .gitignore  PLAN.md  README.md
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: chat.py  main.py
backend/app/auth/: __init__.py  middleware.py
frontend/: package.json
frontend/app/: page.tsx
host-site/: index.html  package-lock.json  package.json  server.js  styles.css
